chore: added app title

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <title>Vite + React</title>
+    <title>Bridgette - Certificate Genertor</title>
   </head>
   <body>
     <div id="root"></div>
